--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta content="ie=edge" http-equiv="x-ua-compatible" />
+        <meta charset="UTF-8"/>
+        <meta content="ie=edge" http-equiv="x-ua-compatible"/>
         <title><%= htmlWebpackPlugin.options.title %></title>
         <style type="text/css">
-            section {
-                height: 1000px;
-            }
-            [ani],
-            [data-ani] {
-                opacity: 0;
-            }
 
-            img {
-                width: 100px;
-                height: auto;
-            }
-        </style>
+[ani],
+[data-ani] {
+    opacity: 0;
+}
+
+img {
+    width: 500px;
+    height: auto;
+}
+
+.image-grid img {
+    width: 200px;
+}
+
+</style>
     </head>
     <body>
-        <section ani="default-appear" class="animation-group">
-            first
+        <section ani="basic-appear" class="animation-group">
+            <h1 ani-child ani-preset="text-line-appear" style="width: 300px">
+                Use All Five is a Los Angeles based design studio that creates brand identities and digital experiences across spaces and screens.
+            </h1>
+            <h1 ani-child ani-preset="text-line-mask" style="width: 300px">
+                Use All Five is a Los Angeles based design studio that creates brand identities and digital experiences across spaces and screens.
+            </h1>
+            <p ani-child ani-preset="text-line-mask" style="width: 600px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean metus tortor, elementum ac rhoncus in, bibendum in felis. Nam varius leo a enim lacinia placerat. Nulla sed faucibus metus. Donec ex mauris, pellentesque sit amet justo at, vehicula commodo ligula. Nullam pharetra sem at dolor condimentum, eget fringilla tortor dictum. Nam ornare viverra odio vehicula maximus. Donec convallis mattis aliquet. Sed aliquet iaculis velit, ut tincidunt sem sodales at.</p>
         </section>
 
-        <section id="bottom" ani="basic-appear" class="animation-group">
-            <img ani-child data-load-src="/images/classes.jpg" />
-            <img ani-child ani-child-order="4" ani-preset="fade-down" load-src="/images/marketing.jpg" />
-            <img ani-child ani-child-order="2" ani-preset="wipe-down" load-src="/images/marketing.jpg" />
-            <div ani-child ani-preset="fade" ani-child-order="1" style="background: green; display: inline-block">
-                <img ani-child ani-child-order="3" ani-preset="wipe-left" load-src="/images/marketing.jpg" />
+        <div ani="basic-appear">
+            <div ani-child ani-preset="wipe-left">
+                <img ani-child ani-preset="zoom-in" load-src="/images/UA5_Work_MrLeight_iPhone_01.jpg"/>
             </div>
-            <img ani-child ani-child-order="1" ani-preset="fade-up" load-src="/images/marketing.jpg" />
+            <!-- Support for ani-groups within groups -->
+            <div ani="basic-appear">
+                <img ani-child ani-preset="fade-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+            </div>
+        </div>
+
+        <section ani="basic-appear" class="image-grid animation-group" id="bottom">
+            <img ani-child data-load-src="/images/UA5_Work_MrLeight_Tablet_01.jpg"/>
+            <img ani-child ani-child-order="4" ani-preset="fade-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+            <img ani-child ani-child-order="2" ani-preset="wipe-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+            <div ani-child ani-child-order="1" ani-preset="fade" style="background: green; display: inline-block">
+                <img ani-child ani-child-order="3" ani-preset="wipe-left" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+            </div>
+            <img ani-child ani-child-order="1" ani-preset="fade-up" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
         </section>
+        <div style="height: 800px"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+        <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
+            <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+        <% } %>
+        <script type="text/javascript">
+            new Ani()
+        </script>
     </body>
 </html>
