Add ani-in-view-trigger-percent param for groups.

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@ img {
             <p ani-child ani-preset="text-line-mask" style="width: 600px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean metus tortor, elementum ac rhoncus in, bibendum in felis. Nam varius leo a enim lacinia placerat. Nulla sed faucibus metus. Donec ex mauris, pellentesque sit amet justo at, vehicula commodo ligula. Nullam pharetra sem at dolor condimentum, eget fringilla tortor dictum. Nam ornare viverra odio vehicula maximus. Donec convallis mattis aliquet. Sed aliquet iaculis velit, ut tincidunt sem sodales at.</p>
         </section>
 
-        <div ani="basic-appear">
+        <div ani-in-view-trigger-percent="0.1" ani="basic-appear">
             <div ani-child ani-preset="wipe-left">
                 <img ani-child ani-preset="zoom-in" load-src="/images/UA5_Work_MrLeight_iPhone_01.jpg"/>
             </div>
