--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <meta content="ie=edge" http-equiv="x-ua-compatible"/>
         <title><%= htmlWebpackPlugin.options.title %></title>
+        <script src="https://unpkg.com/element-closest/browser"></script>
         <style type="text/css">
 
 [ani],
@@ -24,7 +25,11 @@ img {
     </head>
     <body>
         <section ani="basic-appear" class="animation-group">
-            <h1 ani-child ani-preset="text-line-appear" style="width: 300px">
+            <div>
+                <div ani-child ani-preset="zoom-out" style="background: url(/images/UA5_Work_MrLeight_iPhone_01.jpg); height: 300px;"></div>
+            </div>
+
+            <h1 ani-child ani-preset="text-line-appear">
                 Use All Five is a Los Angeles based design studio that creates brand identities and digital experiences across spaces and screens.
             </h1>
             <h1 ani-child ani-preset="text-line-mask" style="width: 300px">
@@ -35,22 +40,22 @@ img {
 
         <div ani-in-view-trigger-percent="0.1" ani="basic-appear">
             <div>
-                <img ani-child ani-preset="zoom-out" load-src="/images/UA5_Work_MrLeight_iPhone_01.jpg"/>
+                <img alt="my alt text" ani-child ani-preset="zoom-out" load-src="/images/UA5_Work_MrLeight_iPhone_01.jpg"/>
             </div>
             <div ani-child ani-ease="Power3.easeOut" ani-preset="wipe-left">
-                <img ani-child ani-preset="zoom-out" load-src="/images/UA5_Work_MrLeight_iPhone_01.jpg"/>
+                <img alt="my alt text" ani-child ani-preset="zoom-out" data-load-src="/images/UA5_Work_MrLeight_iPhone_01.jpg"/>
             </div>
             <!-- Support for ani-groups within groups -->
             <div ani="basic-appear">
-                <img ani-child ani-preset="fade-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+                <img alt="my alt text" ani-child ani-preset="fade-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
             </div>
         </div>
 
         <section ani="basic-appear" class="image-grid animation-group" id="bottom">
-            <img ani-child data-load-src="/images/UA5_Work_MrLeight_Tablet_01.jpg"/>
-            <img ani-child ani-child-order="4" ani-preset="fade-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
-            <img ani-child ani-child-order="2" ani-preset="wipe-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
-            <div ani-child ani-child-order="1" ani-preset="fade" style="background: green; display: inline-block">
+            <img alt="my alt text" ani-child data-load-src="/images/UA5_Work_MrLeight_Tablet_01.jpg"/>
+            <img alt="my alt text" ani-child ani-child-order="4" ani-preset="fade-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+            <img alt="my alt text" ani-child ani-child-order="2" ani-preset="wipe-down" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
+            <div alt="my alt text" ani-child ani-child-order="1" ani-preset="fade" style="background: green; display: inline-block">
                 <img ani-child ani-child-order="3" ani-preset="wipe-left" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
             </div>
             <img ani-child ani-child-order="1" ani-preset="fade-up" load-src="/images/UA5_songmaker_laptop_01.jpg"/>
